@@ -55,3 +55,5 @@ Changelog
 
 - #3366142: Add doc strings to classes.
   [JL 2020-06-08]
+
+- #3366142: Add logging for patch
